# themeda

./: .coveragerc  .gitignore  Digraph.gv  LICENSE  NorthAustMDAP.code-workspace  README.md  README.rst  ecofuture.slurm  ecofuture2000.slurm  ecofutureAki.slurm  gpu.sh  persistence.sh  persistence.slurm  pyproject.toml  rain-persistence.slurm  themeda-unet.slurm  themeda.slurm  tmax-persistence.slurm  train.sh  validation-persistence.csv  validation_jobs_csv.py
.github/workflows/: docs.yml  testing.yml
Notebooks/: Extracting_Data.ipynb  Extracting_Data.ipynb.ipynb  Hypothesis_Testing.ipynb  Linear_Models.ipynb  savanna_collab_local_dataset_exploration.ipynb
docs/: api.rst  cli.rst  conf.py  explorer.rst  hypothesis_test.md  index.rst  visualisations.md
docs/_static/: explorer.js  explorer_custom.css  land_cover_explorer.html
ecofuture/: __init__.py  apps.py  colours.py  dataloaders.py  loss.py  metrics.py  models.py  plots.py  preproc.py  transforms.py  util.py
ecofuture/preproc/: __init__.py  chiplets.py  chips.py  cli.py  dload.py  form.py  preproc.py  spartan.py
ecofuture/preproc/climate/: chiplets.py  dload.py  preproc.py
ecofuture/preproc/dea/: dload.py  preproc.py
scripts/: persistence.py  rain-persistence.py  tmax-persistence.py
test_data/: ga_ls_landcover_class_cyear_2_1-0-0_au_x0y-12_1988-01-01_level4.tif  ga_ls_landcover_class_cyear_2_1-0-0_au_x0y-12_1989-01-01_level4.tif  ga_ls_landcover_class_cyear_2_1-0-0_au_x0y-12_1990-01-01_level4.tif  ga_ls_landcover_class_cyear_2_1-0-0_au_x13y-21_1988-01-01_level4.tif  ga_ls_landcover_class_cyear_2_1-0-0_au_x13y-21_1989-01-01_level4.tif  ga_ls_landcover_class_cyear_2_1-0-0_au_x13y-21_1990-01-01_level4.tif  ga_ls_landcover_class_cyear_2_1-0-0_au_x14y-24_1988-01-01_level4.tif  ga_ls_landcover_class_cyear_2_1-0-0_au_x14y-24_1989-01-01_level4.tif  ga_ls_landcover_class_cyear_2_1-0-0_au_x14y-24_1990-01-01_level4.tif  ga_ls_landcover_class_cyear_2_1-0-0_au_x1y-23_1988-01-01_level4.tif  ga_ls_landcover_class_cyear_2_1-0-0_au_x1y-23_1989-01-01_level4.tif  ga_ls_landcover_class_cyear_2_1-0-0_au_x1y-23_1990-01-01_level4.tif  ga_ls_landcover_class_cyear_2_1-0-0_au_x9y-24_1988-01-01_level4.tif  ga_ls_landcover_class_cyear_2_1-0-0_au_x9y-24_1989-01-01_level4.tif  ga_ls_landcover_class_cyear_2_1-0-0_au_x9y-24_1990-01-01_level4.tif
tests/: test_apps.py  test_land_cover.py  test_loss.py  test_metrics.py  test_models.py  test_preproc.py  test_preproc_climate.py  test_preproc_dea.py
themeda/: apps.py  callbacks.py  convlstm.py  dataloaders.py  enums.py  land_cover.py  loss.py  metrics.py  model_viz.py  models.py  plots.py  transforms.py  util.py
themeda/preproc/: chiplets.py  cli.py  roi.py
themeda/preproc/climate/: chiplets.py  dload.py
themeda/preproc/dea/: meta.py
