[tool.poetry]
name = "EcoFuture"
version = "0.1.0"
description = "A model to forecast changes to ecosystems in Australia."
authors = ["Rebecca Runting, Attila Balogh, Jessie Wells, Steven Myburgh, Melbourne Data Analytics Platform <robert.turnbull@unimelb.edu.au>"]
license = "Apache-2.0"
readme = "README.rst"
repository = "https://github.com/unimelbmdap/ecofuture/"
documentation = "https://unimelbmdap.github.io/ecofuture"
homepage = "https://github.com/unimelbmdap/ecofuture/"
keywords = ["fastai", "torchapp", "pytorch", "deep learning", "command-line interface"]
# For classifiers see https://pypi.org/classifiers/
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
torchapp = {git = "https://github.com/rbturnbull/torchapp.git", branch="diffusion"}
python-dateutil = "^2.8.2"
geojson = "^3.0.1"
rasterio = "^1.3.6"
certifi = "^2023.5.7"
future-typing = "^0.4.1"
rioxarray = "^0.14.1"
pyproj = "^3.5.0"
shapely = "^2.0.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
ipykernel = "^6.6.1"
coverage = "^5.5"
autopep8 = "^1.5.7"
Sphinx = "^4.2.0"
nbsphinx = "^0.8.7"
sphinx-rtd-theme = "^1.0.0"
sphinx-autobuild = "^2021.3.14"
myst-parser = "^0.15.2"
pre-commit = "^2.15.0"
sphinx-copybutton = "^0.4.0"
black = "^21.10b0"
sphinx-click = {git = "https://github.com/rbturnbull/sphinx-click.git"}

[tool.poetry.group.dev.dependencies]
mypy = "^1.3.0"
ruff = "^0.0.267"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ecofuture = "ecofuture.apps:EcoFuture.main"
ecofuture_preproc = "ecofuture.preproc:run"

[tool.mypy]
plugins = "numpy.typing.mypy_plugin"
# corresponding to --strict
warn_unused_configs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = true
strict_equality = true
strict_concatenate = true

[[tool.mypy.overrides]]
module = [
        "geojson",
        "shapely",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "rioxarray"
implicit_reexport = true

[tool.black]
line-length = 88
preview = false
skip-source-first-line = false
skip-string-normalization = false
skip-magic-trailing-comma = false
